Now you can add as many title pages as you want

--- a/ruhuisstijl/distributed/beamerruhuisstijl.cls
+++ b/ruhuisstijl/distributed/beamerruhuisstijl.cls
@@ -438,51 +438,35 @@
 \defbeamertemplate*{title page}{ruhuisstijl}[1][]
 {
     \ifthenelse{\equal{\dept}{clst}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_clst_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{cls}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+        	\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_cls_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{hlcs}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_hlcs_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{kaski}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_kaski_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{ptrs}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_ptrs_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{imr}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_imr_2014-43-front.pdf}
-        \fi
     }{%
     \ifthenelse{\equal{\dept}{ster}}{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.25cm}\hspace*{-1.08cm}
+			\vspace*{-0.25cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl_ster_2014-43-front.pdf}
-        \fi
     }{%
-        \ifnum\thepage>1\relax%
-        \else\vspace*{-0.23cm}\hspace*{-1.08cm}
+			\vspace*{-0.23cm}\hspace*{-1.08cm}
             \includegraphics[width=1\paperwidth]{backgrounds/ruhuisstijl2014-43-front.pdf}
-        \fi
     }}}}}}}%
     \vspace*{-8.5cm}
     \begin{minipage}[t][2.5cm][t]{10cm}%
@@ -522,12 +506,6 @@
 }{%
     \setbeamercolor{title}{fg=ruhuisstijlwit}
 }
-
-%\ifthenelse{\isundefined{\dept}}{%
-%    \setbeamercolor{title}{fg=ruhuisstijlwit}
-%}{%
-%    \setbeamercolor{title}{fg=ruhuisstijlzwart}
-%}
 
 \mode<all>
 
