WiP for ATILA'14

--- a/BayesianColibri/baco-slides.tex
+++ b/BayesianColibri/baco-slides.tex
@@ -1,3 +1,2 @@
-\documentclass[xcolor=table,10pt,t]{beamer}
-\setbeameroption{hide notes}
+\documentclass[notes={hide notes}, department=clst, official=true]{beamerruhuisstijl}
 \input{baco.tex}
